
  * importfeed: Added --scrape option, which uses yt-dlp to screen scrape
    the equivilant of an RSS feed.
  * importfeed --force: Don't treat it as a failure when an already
    downloaded file exists. (Fixes a behavior change introduced in
    10.20230626.)
  * importfeed --force: Avoid creating duplicates of existing
    already downloaded files when yt-dlp or a special remote was used.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Jan 2024 15:59:33 -0400

git-annex (10.20240129) upstream; urgency=medium

  * info: Added "annex sizes of repositories" table to the overall display.
  * import: Sped up import from special remotes.
  * import: Added --message/-m option.
  * Support using commands that implement the Stateless OpenPGP command line
    interface, as an alternative to gpg.
    Currently only supported for encryption=shared special remotes,
    when annex.shared-sop-command is configured.
  * test: Test a specified Stateless OpenPGP command when
    run with eg --test-git-config annex.shared-sop-command=sqop
  * Improve disk free space checking when transferring unsized keys to
    local git remotes.
  * Added configs annex.stalldetection-download, annex.stalldetection-upload,
    annex.bwlimit-download, annex.bwlimit-upload,
    and similar per-remote configs.
  * Improve annex.stalldetection to handle remotes that update progress
    less frequently than the configured time period.
  * external: Monitor file size when getting content from external
    special remotes and use that to update the progress meter,
    in case the external special remote program does not report progress.
  * Added --expected-present file matching option.
  * webapp: Added --port option, and annex.port config.
  * assistant: When generating a gpg secret key, avoid hardcoding the
    key algorithm and size.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Jan 2024 13:12:00 -0400

git-annex (10.20231227) upstream; urgency=medium
